Добавить персональную статистику пользователей
